Added: tags in every routes and the array in swagger.js
